fixed style.css and added back button z-index

--- a/resources/style.css
+++ b/resources/style.css
@@ -165,7 +165,7 @@
   transform: translateX(-50%);
   bottom: 20px;
   margin-top: 25px;
-  z-index: 100;
+  z-index: 1001;
 }
 
 .back-button {
@@ -200,7 +200,7 @@
   padding: 25px;
   border-radius: 8px;
   line-height: 1.8;                 
-  text-align: center;                /
+  text-align: center;
   box-shadow: 0 10px 30px rgba(0,0,0,0.5);
 }
 
